@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-03-02T00:24:08Z",
+  "timestamp" : "2024-03-02T08:02:11Z",
   "count_outdated" : 3855,
   "uniques_outdated" : 1764,
-  "count" : 4008,
-  "uniques" : 1863,
+  "count" : 4009,
+  "uniques" : 1864,
   "clones" : [
     {
       "timestamp": "2024-02-17T00:00:00Z",
@@ -121,6 +121,15 @@
       "uniques": 15,
       "uniques_minmax": [ 1, 15 ],
       "uniques_decinc": [ 0, 15 ]
+    },
+    {
+      "timestamp": "2024-03-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
