@@ -1,5 +1,5 @@
 {
-  "count": 153,
+  "count": 154,
   "uniques": 72,
   "clones": [
     {
@@ -66,6 +66,11 @@
       "timestamp": "2024-03-01T00:00:00Z",
       "count": 22,
       "uniques": 15
+    },
+    {
+      "timestamp": "2024-03-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
